src/main/java/parser/UFOParser.java
// Generated from UFO.g4 by ANTLR 4.8

package main.java.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class UFOParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, WS=63, NEWLINE=64, INTEGER=65, FLOAT=66, 
		SYMBOL=67, IDENT=68, STRING=69;
	public static final int
		RULE_prog = 0, RULE_any = 1, RULE_prefixOps = 2, RULE_level5ops = 3, RULE_level4ops = 4, 
		RULE_level3ops = 5, RULE_level2ops = 6, RULE_bindingOp = 7, RULE_level1ops = 8, 
		RULE_parenList = 9, RULE_exprSeq = 10, RULE_bindingSeq = 11, RULE_commaSepExprs = 12, 
		RULE_expr = 13, RULE_eAsync = 14, RULE_eBackQuote = 15, RULE_eCobegin = 16, 
		RULE_eFun = 17, RULE_eFunRules = 18, RULE_eIf = 19, RULE_eLet = 20, RULE_eLoop = 21, 
		RULE_eNondet = 22, RULE_eQuote = 23, RULE_eSeq = 24, RULE_eWhile = 25, 
		RULE_collection = 26, RULE_cArray = 27, RULE_cBinding = 28, RULE_cBindingLhs = 29, 
		RULE_cHash = 30, RULE_cList = 31, RULE_cQueue = 32, RULE_cSet = 33, RULE_cStack = 34, 
		RULE_cTerm = 35, RULE_cTermAttrib = 36, RULE_atom = 37, RULE_aBoolean = 38, 
		RULE_aIdent = 39, RULE_aInteger = 40, RULE_aNil = 41, RULE_aReal = 42, 
		RULE_aString = 43, RULE_aSymbol = 44;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "any", "prefixOps", "level5ops", "level4ops", "level3ops", "level2ops", 
			"bindingOp", "level1ops", "parenList", "exprSeq", "bindingSeq", "commaSepExprs", 
			"expr", "eAsync", "eBackQuote", "eCobegin", "eFun", "eFunRules", "eIf", 
			"eLet", "eLoop", "eNondet", "eQuote", "eSeq", "eWhile", "collection", 
			"cArray", "cBinding", "cBindingLhs", "cHash", "cList", "cQueue", "cSet", 
			"cStack", "cTerm", "cTermAttrib", "atom", "aBoolean", "aIdent", "aInteger", 
			"aNil", "aReal", "aString", "aSymbol"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "']'", "'-'", "'+'", "'not'", "'.'", "':'", "'^'", "'..'", 
			"'*'", "'/'", "'//'", "'%'", "'::'", "':>'", "':?'", "'++'", "'+++'", 
			"'='", "':='", "'=~'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
			"'##'", "'in'", "'is'", "'isnot'", "'and'", "'or'", "'xor'", "'('", "')'", 
			"','", "'async'", "'end'", "'`'", "'cobegin'", "'fun'", "'fun#'", "'|'", 
			"'if'", "'then'", "'else'", "'let'", "'loop'", "'do'", "'nondet'", "'''", 
			"'while'", "'{'", "'}'", "'#{'", "'~['", "'${'", "'$['", "'true'", "'false'", 
			"'nil'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "WS", "NEWLINE", "INTEGER", "FLOAT", "SYMBOL", "IDENT", 
			"STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "UFO.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public UFOParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(UFOParser.EOF, 0); }
		public List<AnyContext> any() {
			return getRuleContexts(AnyContext.class);
		}
		public AnyContext any(int i) {
			return getRuleContext(AnyContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFOVisitor ) return ((UFOVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(90);
				any(0);
				}
				}
				setState(93); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__37) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__44) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__51) | (1L << T__52) | (1L << T__53) | (1L << T__55) | (1L << T__56) | (1L << T__57) | (1L << T__58) | (1L << T__59) | (1L << T__60) | (1L << T__61))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (INTEGER - 65)) | (1L << (FLOAT - 65)) | (1L << (SYMBOL - 65)) | (1L << (IDENT - 65)) | (1L << (STRING - 65)))) != 0) );
			setState(95);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnyContext extends ParserRuleContext {
		public AnyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_any; }
	 
		public AnyContext() { }
		public void copyFrom(AnyContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PrefixRuleContext extends AnyContext {
		public PrefixOpsContext op;
		public AnyContext any() {
			return getRuleContext(AnyContext.class,0);
		}
		public PrefixOpsContext prefixOps() {
			return getRuleContext(PrefixOpsContext.class,0);
		}
		public PrefixRuleContext(AnyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).enterPrefixRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).exitPrefixRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFOVisitor ) return ((UFOVisitor<? extends T>)visitor).visitPrefixRule(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CollectionRuleContext extends AnyContext {
		public CollectionContext collection() {
			return getRuleContext(CollectionContext.class,0);
		}
		public CollectionRuleContext(AnyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).enterCollectionRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).exitCollectionRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFOVisitor ) return ((UFOVisitor<? extends T>)visitor).visitCollectionRule(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AtomRuleContext extends AnyContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public AtomRuleContext(AnyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).enterAtomRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).exitAtomRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFOVisitor ) return ((UFOVisitor<? extends T>)visitor).visitAtomRule(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InfixOpRuleContext extends AnyContext {
		public List<AnyContext> any() {
			return getRuleContexts(AnyContext.class);
		}
		public AnyContext any(int i) {
			return getRuleContext(AnyContext.class,i);
		}
		public Level5opsContext level5ops() {
			return getRuleContext(Level5opsContext.class,0);
		}
		public Level4opsContext level4ops() {
			return getRuleContext(Level4opsContext.class,0);
		}
		public Level3opsContext level3ops() {
			return getRuleContext(Level3opsContext.class,0);
		}
		public Level2opsContext level2ops() {
			return getRuleContext(Level2opsContext.class,0);
		}
		public Level1opsContext level1ops() {
			return getRuleContext(Level1opsContext.class,0);
		}
		public InfixOpRuleContext(AnyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).enterInfixOpRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).exitInfixOpRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFOVisitor ) return ((UFOVisitor<? extends T>)visitor).visitInfixOpRule(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ApplicationRuleContext extends AnyContext {
		public AnyContext any() {
			return getRuleContext(AnyContext.class,0);
		}
		public ParenListContext parenList() {
			return getRuleContext(ParenListContext.class,0);
		}
		public ApplicationRuleContext(AnyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).enterApplicationRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).exitApplicationRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFOVisitor ) return ((UFOVisitor<? extends T>)visitor).visitApplicationRule(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BindingOpRuleContext extends AnyContext {
		public List<AnyContext> any() {
			return getRuleContexts(AnyContext.class);
		}
		public AnyContext any(int i) {
			return getRuleContext(AnyContext.class,i);
		}
		public BindingOpContext bindingOp() {
			return getRuleContext(BindingOpContext.class,0);
		}
		public BindingOpRuleContext(AnyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).enterBindingOpRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).exitBindingOpRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFOVisitor ) return ((UFOVisitor<? extends T>)visitor).visitBindingOpRule(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SubscriptRuleContext extends AnyContext {
		public List<AnyContext> any() {
			return getRuleContexts(AnyContext.class);
		}
		public AnyContext any(int i) {
			return getRuleContext(AnyContext.class,i);
		}
		public SubscriptRuleContext(AnyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).enterSubscriptRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).exitSubscriptRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFOVisitor ) return ((UFOVisitor<? extends T>)visitor).visitSubscriptRule(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExprRuleContext extends AnyContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExprRuleContext(AnyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).enterExprRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).exitExprRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFOVisitor ) return ((UFOVisitor<? extends T>)visitor).visitExprRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnyContext any() throws RecognitionException {
		return any(0);
	}

	private AnyContext any(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		AnyContext _localctx = new AnyContext(_ctx, _parentState);
		AnyContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_any, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				_localctx = new PrefixRuleContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(98);
				((PrefixRuleContext)_localctx).op = prefixOps();
				setState(99);
				any(12);
				}
				break;
			case 2:
				{
				_localctx = new ExprRuleContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(101);
				expr();
				}
				break;
			case 3:
				{
				_localctx = new CollectionRuleContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(102);
				collection();
				}
				break;
			case 4:
				{
				_localctx = new AtomRuleContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(103);
				atom();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(139);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(137);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new InfixOpRuleContext(new AnyContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_any);
						setState(106);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(107);
						level5ops();
						setState(108);
						any(11);
						}
						break;
					case 2:
						{
						_localctx = new InfixOpRuleContext(new AnyContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_any);
						setState(110);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(111);
						level4ops();
						setState(112);
						any(9);
						}
						break;
					case 3:
						{
						_localctx = new InfixOpRuleContext(new AnyContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_any);
						setState(114);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(115);
						level3ops();
						setState(116);
						any(8);
						}
						break;
					case 4:
						{
						_localctx = new InfixOpRuleContext(new AnyContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_any);
						setState(118);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(119);
						level2ops();
						setState(120);
						any(7);
						}
						break;
					case 5:
						{
						_localctx = new BindingOpRuleContext(new AnyContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_any);
						setState(122);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(123);
						bindingOp();
						setState(124);
						any(6);
						}
						break;
					case 6:
						{
						_localctx = new InfixOpRuleContext(new AnyContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_any);
						setState(126);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(127);
						level1ops();
						setState(128);
						any(5);
						}
						break;
					case 7:
						{
						_localctx = new SubscriptRuleContext(new AnyContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_any);
						setState(130);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(131);
						match(T__0);
						setState(132);
						any(0);
						setState(133);
						match(T__1);
						}
						break;
					case 8:
						{
						_localctx = new ApplicationRuleContext(new AnyContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_any);
						setState(135);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(136);
						parenList();
						}
						break;
					}
					} 
				}
				setState(141);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class PrefixOpsContext extends ParserRuleContext {
		public PrefixOpsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prefixOps; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).enterPrefixOps(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).exitPrefixOps(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFOVisitor ) return ((UFOVisitor<? extends T>)visitor).visitPrefixOps(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrefixOpsContext prefixOps() throws RecognitionException {
		PrefixOpsContext _localctx = new PrefixOpsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_prefixOps);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Level5opsContext extends ParserRuleContext {
		public Level5opsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_level5ops; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).enterLevel5ops(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).exitLevel5ops(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFOVisitor ) return ((UFOVisitor<? extends T>)visitor).visitLevel5ops(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Level5opsContext level5ops() throws RecognitionException {
		Level5opsContext _localctx = new Level5opsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_level5ops);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			_la = _input.LA(1);
			if ( !(_la==T__5 || _la==T__6) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Level4opsContext extends ParserRuleContext {
		public Level4opsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_level4ops; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).enterLevel4ops(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).exitLevel4ops(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFOVisitor ) return ((UFOVisitor<? extends T>)visitor).visitLevel4ops(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Level4opsContext level4ops() throws RecognitionException {
		Level4opsContext _localctx = new Level4opsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_level4ops);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			_la = _input.LA(1);
			if ( !(_la==T__7 || _la==T__8) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Level3opsContext extends ParserRuleContext {
		public Level3opsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_level3ops; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).enterLevel3ops(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UFOListener ) ((UFOListener)listener).exitLevel3ops(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UFOVisitor ) return ((UFOVisitor<? extends T>)visitor).visitLevel3ops(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Level3opsContext level3ops() throws RecognitionException {
		Level3opsContext _localctx = new Level3opsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_level3ops);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
